sandbox/output
NumberParserTest.java:16: error: cannot find symbol
        varify(spliter).setDelimiter(",");
        ^
  symbol:   method varify(Spliter)
  location: class NumberParserTest
NumberParserTest.java:17: error: cannot find symbol
        varify(spliter).split("");
        ^
  symbol:   method varify(Spliter)
  location: class NumberParserTest
2 errors
